[project]
name = "acrobot"
version = "0.1.0"
description = "Acrobot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cerebras-cloud-sdk>=1.59.0",
    "fastapi>=0.127.0",
    "google-genai>=1.56.0",
    "python-telegram-bot>=22.5",
    "pyyaml>=6.0.3",
    "uvicorn>=0.40.0",
]
[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-s -ra -v -x --strict-markers --log-cli-level=INFO"
pythonpath = ["."]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "types-pyyaml>=6.0.12.20250915",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."
module-name = "acrobot"

[project.scripts]            
acrobot = "acrobot.runner:main"     

